tests/neg-custom-args/no-experimental/i13091.scala
import annotation.experimental

@experimental class Foo // error: use of @experimental is experimental ...

def test: Unit = new Foo // error: class Foo is marked @experimental ...
